# avnlearn-puzzle

./: .gitignore  Dockerfile  Gemfile  LICENSE  Vagrantfile  _config.yml  avnlearn-puzzle.code-workspace  index.html  mix-manifest.json  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  webpack.mix.js
.github/workflows/: main.yml
assets/README/: Data.md
avn_puzzle/: __init__.py  __main__.py  words.py
avn_puzzle/randmath/: Interface.py  RArithmetic.py  README.md  RMathematics.py  ROperation.ipynb  ROperation.py  __init__.py
avn_puzzle/randmath/html/css/: a5.css  a6.css  a6_2.css  a6_div_style.css  a7.css  a7_2.css  a7_algebra.css  a7_expend.css  a7_identities.css  (+2 more)
avn_puzzle/randmath/html_generator/: Json_formatter.py  __init__.py
avn_puzzle/randmath/pdf_manipulation/: ChromePDF.py  PDFcpu.py  __init__.py
avn_puzzle/randunit/: RUnit.ipynb  __init__.py
avn_puzzle/randunit/utils/: __init__.py  eval_utils.py  extra_math.py
avn_puzzle/static/: randmath.html  sudoku.html
avn_puzzle/view/: index.tpl
public/css/: style.css
public/js/: puzzle.js  sudoku.js  wordsearch.js
src/: app_randmath.ts  app_sudoku.ts  app_wordsearch.ts
src/css/: font.css  randmath.css  style.css  sudoku.css  wordsearch.css
src/js/: app_randmath.js  sudoku.ts  wordsearch.ts
src/ts/: magicsquare.ts  randunit.ts  sudoku.ts  wordsearch.ts
src/ts/dictionary/: wordlist.json
src/ts/utils/: index.ts  random.ts  server.ts  utils.ts
static/: wordsearch.html
static/assets/: mix-manifest.json
static/assets/js/: app_randmath.js
view/: index.tpl
(+4 files in other folders)
