[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "avn_puzzle"
authors = [{name = "Ayush Bious Raj", email = "ayushbiousraj@gmail.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
dependencies = [
    "bottle",
    "sympy",
    "antlr4-python3-runtime==4.11"
]

[project.scripts]
avn_puzzle = "avn_puzzle:main"